src/main/java/com/mikel/test/language/TestDiamon.java
/*
 * To change this license header, choose License Headers in Project Properties.
 * To change this template file, choose Tools | Templates
 * and open the template in the editor.
 */
package com.mikel.test.language;

import java.util.ArrayList;
import java.util.List;

/**
 *
 * @author Miguel
 */
public class TestDiamon {
 
    public static void main(String[] args) {
        //error
        //List<Object> list= new ArrayList<String>();
        
        List<Object> list= new ArrayList<Object>();
        List<Object> list2= new ArrayList<>();
    }
}
